--- a/0.SqrEquation/doc/latex/annotated.tex
+++ b/0.SqrEquation/doc/latex/annotated.tex
@@ -1,4 +1,5 @@
 \doxysection{Class List}
 Here are the classes, structs, unions and interfaces with brief descriptions\+:\begin{DoxyCompactList}
-\item\contentsline{section}{\mbox{\hyperlink{struct_quadratic_equation_solution_status}{Quadratic\+Equation\+Solution\+Status}} }{\pageref{struct_quadratic_equation_solution_status}}{}
+\item\contentsline{section}{\mbox{\hyperlink{struct_linear_equation_solution_status}{Linear\+Equation\+Solution\+Status}} \\*Struct for solving linear case }{\pageref{struct_linear_equation_solution_status}}{}
+\item\contentsline{section}{\mbox{\hyperlink{struct_quadratic_equation_solution_status}{Quadratic\+Equation\+Solution\+Status}} \\*Struct for solving quadratic case }{\pageref{struct_quadratic_equation_solution_status}}{}
 \end{DoxyCompactList}
