--- a/0.SqrEquation/doc/latex/examples.tex
+++ b/0.SqrEquation/doc/latex/examples.tex
@@ -4,11 +4,12 @@ Here is a list of all examples\+:\begin{DoxyCompactItemize}
 \mbox{\hyperlink{get_coefficients-example}{get\+Coefficients}}\item 
 \mbox{\hyperlink{solve_linear_case-example}{solve\+Linear\+Case}}\item 
 \mbox{\hyperlink{solve_quad_case-example}{solve\+Quad\+Case}}\item 
-\mbox{\hyperlink{_quad_equation_solution-example}{Quad\+Equation\+Solution}}\item 
 \mbox{\hyperlink{compare_double-example}{compare\+Double}}\item 
 \mbox{\hyperlink{uni_test-example}{uni\+Test}}\item 
 \mbox{\hyperlink{clear_buffer-example}{clear\+Buffer}}\item 
-\mbox{\hyperlink{file_test_output-example}{file\+Test\+Output}}\item 
-\mbox{\hyperlink{console_test_output-example}{console\+Test\+Output}}\item 
-\mbox{\hyperlink{solve_quad_equation-example}{solve\+Quad\+Equation}}\item 
-\mbox{\hyperlink{print_roots-example}{print\+Roots}}\end{DoxyCompactItemize}
+\mbox{\hyperlink{file_quad_test_output-example}{file\+Quad\+Test\+Output}}\item 
+\mbox{\hyperlink{console_quad_test_output-example}{console\+Quad\+Test\+Output}}\item 
+\mbox{\hyperlink{solve_quad_equation_c_l_i-example}{solve\+Quad\+Equation\+CLI}}\item 
+\mbox{\hyperlink{print_roots-example}{print\+Roots}}\item 
+\mbox{\hyperlink{file_linear_test_output-example}{file\+Linear\+Test\+Output}}\item 
+\mbox{\hyperlink{console_linear_test_output-example}{console\+Linear\+Test\+Output}}\end{DoxyCompactItemize}
