--- a/0.SqrEquation/doc/latex/struct_quadratic_equation_solution_status.tex
+++ b/0.SqrEquation/doc/latex/struct_quadratic_equation_solution_status.tex
@@ -2,6 +2,11 @@
 \label{struct_quadratic_equation_solution_status}\index{QuadraticEquationSolutionStatus@{QuadraticEquationSolutionStatus}}
 
 
+struct for solving quadratic case.  
+
+
+
+
 {\ttfamily \#include $<$Equation.\+h$>$}
 
 \doxysubsection*{Public Attributes}
@@ -18,6 +23,9 @@ double \mbox{\hyperlink{struct_quadratic_equation_solution_status_a49c8286f5d2db
 int \mbox{\hyperlink{struct_quadratic_equation_solution_status_a7ae0ba088695a0270f5f1e68e4840200}{condition}}
 \end{DoxyCompactItemize}
 
+
+\doxysubsection{Detailed Description}
+struct for solving quadratic case. 
 
 \doxysubsection{Member Data Documentation}
 \mbox{\Hypertarget{struct_quadratic_equation_solution_status_a2ce59778efaaec661264daf82e1486a1}\label{struct_quadratic_equation_solution_status_a2ce59778efaaec661264daf82e1486a1}} 
@@ -54,4 +62,4 @@ int \mbox{\hyperlink{struct_quadratic_equation_solution_status_a7ae0ba088695a027
 
 The documentation for this struct was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
-D\+:/\+Git/\+Summer\+School2021/0.\+Sqr\+Equation/\mbox{\hyperlink{_equation_8h}{Equation.\+h}}\end{DoxyCompactItemize}
+\mbox{\hyperlink{_equation_8h}{Equation.\+h}}\end{DoxyCompactItemize}
