--- a/0.SqrEquation/doc/latex/_equation_8c.tex
+++ b/0.SqrEquation/doc/latex/_equation_8c.tex
@@ -1,5 +1,5 @@
-\hypertarget{_equation_8c}{}\doxysection{D\+:/\+Git/\+Summer\+School2021/0.Sqr\+Equation/\+Equation.c File Reference}
-\label{_equation_8c}\index{D:/Git/SummerSchool2021/0.SqrEquation/Equation.c@{D:/Git/SummerSchool2021/0.SqrEquation/Equation.c}}
+\hypertarget{_equation_8c}{}\doxysection{Equation.\+c File Reference}
+\label{_equation_8c}\index{Equation.c@{Equation.c}}
 {\ttfamily \#include \char`\"{}Equation.\+h\char`\"{}}\newline
 \doxysubsection*{Functions}
 \begin{DoxyCompactItemize}
@@ -10,19 +10,21 @@ struct \mbox{\hyperlink{struct_quadratic_equation_solution_status}{Quadratic\+Eq
 \item 
 void \mbox{\hyperlink{_equation_8c_a20bbd4d45e3f01305dd709f5a9cc9952}{clear\+Buffer}} ()
 \item 
-struct \mbox{\hyperlink{struct_quadratic_equation_solution_status}{Quadratic\+Equation\+Solution\+Status}} \mbox{\hyperlink{_equation_8c_ad5a404d4ebb1b96e7c9b5266239bd605}{solve\+Linear\+Case}} (double a, double b)
+struct \mbox{\hyperlink{struct_linear_equation_solution_status}{Linear\+Equation\+Solution\+Status}} \mbox{\hyperlink{_equation_8c_adafa02cf990b67470a55b66e359ad0da}{solve\+Linear\+Case}} (double a, double b)
 \item 
 void \mbox{\hyperlink{_equation_8c_a6a1eedd89ebad5e93563be37d2d4b0a0}{get\+Coefficients}} (double $\ast$a, double $\ast$b, double $\ast$c)
 \item 
-struct \mbox{\hyperlink{struct_quadratic_equation_solution_status}{Quadratic\+Equation\+Solution\+Status}} \mbox{\hyperlink{_equation_8c_a97cd6beb5d4ce054dc280a4544a5b01d}{quad\+Equation\+Solution}} ()
+void \mbox{\hyperlink{_equation_8c_a26d5f3704784e3562c7c75e210072ae8}{file\+Quad\+Test\+Output}} (struct \mbox{\hyperlink{struct_quadratic_equation_solution_status}{Quadratic\+Equation\+Solution\+Status}} test, double b\+Part, double d\+Part, double first\+Rational, double second\+Rational, FILE $\ast$output, enum \mbox{\hyperlink{_equation_8h_a278d63eb3021b2904f952c737925a79b}{EQUATION\+\_\+\+SOLUTION\+\_\+\+CONDITION}} condition, int test\+Number)
 \item 
-void \mbox{\hyperlink{_equation_8c_a5873e58e44f30d6e898fc4ee526ebfca}{file\+Test\+Output}} (struct \mbox{\hyperlink{struct_quadratic_equation_solution_status}{Quadratic\+Equation\+Solution\+Status}} test, double b\+Part, double d\+Part, double first\+Rational, double second\+Rational, FILE $\ast$output, enum \mbox{\hyperlink{_equation_8h_aeff6e1b0a8bacd5a8a58f17fd7360288}{QUADRATIC\+\_\+\+EQUATION\+\_\+\+SOLUTION\+\_\+\+CONDITION}} condition, int test\+Number)
+void \mbox{\hyperlink{_equation_8c_ab3195842a0ded345086a991d565582f9}{console\+Quad\+Test\+Output}} (struct \mbox{\hyperlink{struct_quadratic_equation_solution_status}{Quadratic\+Equation\+Solution\+Status}} test, double b\+Part, double d\+Part, double first\+Rational, double second\+Rational, enum \mbox{\hyperlink{_equation_8h_a278d63eb3021b2904f952c737925a79b}{EQUATION\+\_\+\+SOLUTION\+\_\+\+CONDITION}} condition, int test\+Number)
 \item 
-void \mbox{\hyperlink{_equation_8c_ad33cd4620a3f7e4300539c3ef7bc2b0f}{console\+Test\+Output}} (struct \mbox{\hyperlink{struct_quadratic_equation_solution_status}{Quadratic\+Equation\+Solution\+Status}} test, double b\+Part, double d\+Part, double first\+Rational, double second\+Rational, enum \mbox{\hyperlink{_equation_8h_aeff6e1b0a8bacd5a8a58f17fd7360288}{QUADRATIC\+\_\+\+EQUATION\+\_\+\+SOLUTION\+\_\+\+CONDITION}} condition, int test\+Number)
+void \mbox{\hyperlink{_equation_8c_a606cb8eed56b36d13d7c7193ebe439dc}{file\+Linear\+Test\+Output}} (struct \mbox{\hyperlink{struct_linear_equation_solution_status}{Linear\+Equation\+Solution\+Status}} test, FILE $\ast$output, enum \mbox{\hyperlink{_equation_8h_a278d63eb3021b2904f952c737925a79b}{EQUATION\+\_\+\+SOLUTION\+\_\+\+CONDITION}} condition, double root, int test\+Number)
+\item 
+void \mbox{\hyperlink{_equation_8c_a36b178d16632419f52dfab7b35249c1e}{console\+Linear\+Test\+Output}} (struct \mbox{\hyperlink{struct_linear_equation_solution_status}{Linear\+Equation\+Solution\+Status}} test, enum \mbox{\hyperlink{_equation_8h_a278d63eb3021b2904f952c737925a79b}{EQUATION\+\_\+\+SOLUTION\+\_\+\+CONDITION}} condition, double root, int test\+Number)
 \item 
 void \mbox{\hyperlink{_equation_8c_ad36c4b2c7080a1289f22f17233075394}{unit\+Test}} ()
 \item 
-void \mbox{\hyperlink{_equation_8c_af16f509663c0258d3cce390443d31ce1}{print\+Roots}} (struct \mbox{\hyperlink{struct_quadratic_equation_solution_status}{Quadratic\+Equation\+Solution\+Status}} Equation)
+void \mbox{\hyperlink{_equation_8c_add049e679f57d337bae6e22878334ffd}{print\+Roots}} (struct \mbox{\hyperlink{struct_quadratic_equation_solution_status}{Quadratic\+Equation\+Solution\+Status}} Quad\+Equation, struct \mbox{\hyperlink{struct_linear_equation_solution_status}{Linear\+Equation\+Solution\+Status}} Lin\+Equation)
 \item 
 void \mbox{\hyperlink{_equation_8c_a8843773b33c7469c4860f18c0cb08b03}{solve\+Quad\+Equation\+CLI}} ()
 \end{DoxyCompactItemize}
@@ -41,17 +43,29 @@ void \mbox{\hyperlink{_equation_8c_a8843773b33c7469c4860f18c0cb08b03}{solve\+Qua
 \doxysubsubsection{\texorpdfstring{compareDouble()}{compareDouble()}}
 {\footnotesize\ttfamily int compare\+Double (\begin{DoxyParamCaption}\item[{double}]{lhs,  }\item[{double}]{rhs }\end{DoxyParamCaption})}
 
-\mbox{\Hypertarget{_equation_8c_ad33cd4620a3f7e4300539c3ef7bc2b0f}\label{_equation_8c_ad33cd4620a3f7e4300539c3ef7bc2b0f}} 
-\index{Equation.c@{Equation.c}!consoleTestOutput@{consoleTestOutput}}
-\index{consoleTestOutput@{consoleTestOutput}!Equation.c@{Equation.c}}
-\doxysubsubsection{\texorpdfstring{consoleTestOutput()}{consoleTestOutput()}}
-{\footnotesize\ttfamily void console\+Test\+Output (\begin{DoxyParamCaption}\item[{struct \mbox{\hyperlink{struct_quadratic_equation_solution_status}{Quadratic\+Equation\+Solution\+Status}}}]{test,  }\item[{double}]{b\+Part,  }\item[{double}]{d\+Part,  }\item[{double}]{first\+Rational,  }\item[{double}]{second\+Rational,  }\item[{enum \mbox{\hyperlink{_equation_8h_aeff6e1b0a8bacd5a8a58f17fd7360288}{QUADRATIC\+\_\+\+EQUATION\+\_\+\+SOLUTION\+\_\+\+CONDITION}}}]{condition,  }\item[{int}]{test\+Number }\end{DoxyParamCaption})}
+\mbox{\Hypertarget{_equation_8c_a36b178d16632419f52dfab7b35249c1e}\label{_equation_8c_a36b178d16632419f52dfab7b35249c1e}} 
+\index{Equation.c@{Equation.c}!consoleLinearTestOutput@{consoleLinearTestOutput}}
+\index{consoleLinearTestOutput@{consoleLinearTestOutput}!Equation.c@{Equation.c}}
+\doxysubsubsection{\texorpdfstring{consoleLinearTestOutput()}{consoleLinearTestOutput()}}
+{\footnotesize\ttfamily void console\+Linear\+Test\+Output (\begin{DoxyParamCaption}\item[{struct \mbox{\hyperlink{struct_linear_equation_solution_status}{Linear\+Equation\+Solution\+Status}}}]{test,  }\item[{enum \mbox{\hyperlink{_equation_8h_a278d63eb3021b2904f952c737925a79b}{EQUATION\+\_\+\+SOLUTION\+\_\+\+CONDITION}}}]{condition,  }\item[{double}]{root,  }\item[{int}]{test\+Number }\end{DoxyParamCaption})}
 
-\mbox{\Hypertarget{_equation_8c_a5873e58e44f30d6e898fc4ee526ebfca}\label{_equation_8c_a5873e58e44f30d6e898fc4ee526ebfca}} 
-\index{Equation.c@{Equation.c}!fileTestOutput@{fileTestOutput}}
-\index{fileTestOutput@{fileTestOutput}!Equation.c@{Equation.c}}
-\doxysubsubsection{\texorpdfstring{fileTestOutput()}{fileTestOutput()}}
-{\footnotesize\ttfamily void file\+Test\+Output (\begin{DoxyParamCaption}\item[{struct \mbox{\hyperlink{struct_quadratic_equation_solution_status}{Quadratic\+Equation\+Solution\+Status}}}]{test,  }\item[{double}]{b\+Part,  }\item[{double}]{d\+Part,  }\item[{double}]{first\+Rational,  }\item[{double}]{second\+Rational,  }\item[{FILE $\ast$}]{output,  }\item[{enum \mbox{\hyperlink{_equation_8h_aeff6e1b0a8bacd5a8a58f17fd7360288}{QUADRATIC\+\_\+\+EQUATION\+\_\+\+SOLUTION\+\_\+\+CONDITION}}}]{condition,  }\item[{int}]{test\+Number }\end{DoxyParamCaption})}
+\mbox{\Hypertarget{_equation_8c_ab3195842a0ded345086a991d565582f9}\label{_equation_8c_ab3195842a0ded345086a991d565582f9}} 
+\index{Equation.c@{Equation.c}!consoleQuadTestOutput@{consoleQuadTestOutput}}
+\index{consoleQuadTestOutput@{consoleQuadTestOutput}!Equation.c@{Equation.c}}
+\doxysubsubsection{\texorpdfstring{consoleQuadTestOutput()}{consoleQuadTestOutput()}}
+{\footnotesize\ttfamily void console\+Quad\+Test\+Output (\begin{DoxyParamCaption}\item[{struct \mbox{\hyperlink{struct_quadratic_equation_solution_status}{Quadratic\+Equation\+Solution\+Status}}}]{test,  }\item[{double}]{b\+Part,  }\item[{double}]{d\+Part,  }\item[{double}]{first\+Rational,  }\item[{double}]{second\+Rational,  }\item[{enum \mbox{\hyperlink{_equation_8h_a278d63eb3021b2904f952c737925a79b}{EQUATION\+\_\+\+SOLUTION\+\_\+\+CONDITION}}}]{condition,  }\item[{int}]{test\+Number }\end{DoxyParamCaption})}
+
+\mbox{\Hypertarget{_equation_8c_a606cb8eed56b36d13d7c7193ebe439dc}\label{_equation_8c_a606cb8eed56b36d13d7c7193ebe439dc}} 
+\index{Equation.c@{Equation.c}!fileLinearTestOutput@{fileLinearTestOutput}}
+\index{fileLinearTestOutput@{fileLinearTestOutput}!Equation.c@{Equation.c}}
+\doxysubsubsection{\texorpdfstring{fileLinearTestOutput()}{fileLinearTestOutput()}}
+{\footnotesize\ttfamily void file\+Linear\+Test\+Output (\begin{DoxyParamCaption}\item[{struct \mbox{\hyperlink{struct_linear_equation_solution_status}{Linear\+Equation\+Solution\+Status}}}]{test,  }\item[{FILE $\ast$}]{output,  }\item[{enum \mbox{\hyperlink{_equation_8h_a278d63eb3021b2904f952c737925a79b}{EQUATION\+\_\+\+SOLUTION\+\_\+\+CONDITION}}}]{condition,  }\item[{double}]{root,  }\item[{int}]{test\+Number }\end{DoxyParamCaption})}
+
+\mbox{\Hypertarget{_equation_8c_a26d5f3704784e3562c7c75e210072ae8}\label{_equation_8c_a26d5f3704784e3562c7c75e210072ae8}} 
+\index{Equation.c@{Equation.c}!fileQuadTestOutput@{fileQuadTestOutput}}
+\index{fileQuadTestOutput@{fileQuadTestOutput}!Equation.c@{Equation.c}}
+\doxysubsubsection{\texorpdfstring{fileQuadTestOutput()}{fileQuadTestOutput()}}
+{\footnotesize\ttfamily void file\+Quad\+Test\+Output (\begin{DoxyParamCaption}\item[{struct \mbox{\hyperlink{struct_quadratic_equation_solution_status}{Quadratic\+Equation\+Solution\+Status}}}]{test,  }\item[{double}]{b\+Part,  }\item[{double}]{d\+Part,  }\item[{double}]{first\+Rational,  }\item[{double}]{second\+Rational,  }\item[{FILE $\ast$}]{output,  }\item[{enum \mbox{\hyperlink{_equation_8h_a278d63eb3021b2904f952c737925a79b}{EQUATION\+\_\+\+SOLUTION\+\_\+\+CONDITION}}}]{condition,  }\item[{int}]{test\+Number }\end{DoxyParamCaption})}
 
 \mbox{\Hypertarget{_equation_8c_a6a1eedd89ebad5e93563be37d2d4b0a0}\label{_equation_8c_a6a1eedd89ebad5e93563be37d2d4b0a0}} 
 \index{Equation.c@{Equation.c}!getCoefficients@{getCoefficients}}
@@ -59,23 +73,17 @@ void \mbox{\hyperlink{_equation_8c_a8843773b33c7469c4860f18c0cb08b03}{solve\+Qua
 \doxysubsubsection{\texorpdfstring{getCoefficients()}{getCoefficients()}}
 {\footnotesize\ttfamily void get\+Coefficients (\begin{DoxyParamCaption}\item[{double $\ast$}]{a,  }\item[{double $\ast$}]{b,  }\item[{double $\ast$}]{c }\end{DoxyParamCaption})}
 
-\mbox{\Hypertarget{_equation_8c_af16f509663c0258d3cce390443d31ce1}\label{_equation_8c_af16f509663c0258d3cce390443d31ce1}} 
+\mbox{\Hypertarget{_equation_8c_add049e679f57d337bae6e22878334ffd}\label{_equation_8c_add049e679f57d337bae6e22878334ffd}} 
 \index{Equation.c@{Equation.c}!printRoots@{printRoots}}
 \index{printRoots@{printRoots}!Equation.c@{Equation.c}}
 \doxysubsubsection{\texorpdfstring{printRoots()}{printRoots()}}
-{\footnotesize\ttfamily void print\+Roots (\begin{DoxyParamCaption}\item[{struct \mbox{\hyperlink{struct_quadratic_equation_solution_status}{Quadratic\+Equation\+Solution\+Status}}}]{Equation }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily void print\+Roots (\begin{DoxyParamCaption}\item[{struct \mbox{\hyperlink{struct_quadratic_equation_solution_status}{Quadratic\+Equation\+Solution\+Status}}}]{Quad\+Equation,  }\item[{struct \mbox{\hyperlink{struct_linear_equation_solution_status}{Linear\+Equation\+Solution\+Status}}}]{Lin\+Equation }\end{DoxyParamCaption})}
 
-\mbox{\Hypertarget{_equation_8c_a97cd6beb5d4ce054dc280a4544a5b01d}\label{_equation_8c_a97cd6beb5d4ce054dc280a4544a5b01d}} 
-\index{Equation.c@{Equation.c}!quadEquationSolution@{quadEquationSolution}}
-\index{quadEquationSolution@{quadEquationSolution}!Equation.c@{Equation.c}}
-\doxysubsubsection{\texorpdfstring{quadEquationSolution()}{quadEquationSolution()}}
-{\footnotesize\ttfamily struct \mbox{\hyperlink{struct_quadratic_equation_solution_status}{Quadratic\+Equation\+Solution\+Status}} quad\+Equation\+Solution (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
-
-\mbox{\Hypertarget{_equation_8c_ad5a404d4ebb1b96e7c9b5266239bd605}\label{_equation_8c_ad5a404d4ebb1b96e7c9b5266239bd605}} 
+\mbox{\Hypertarget{_equation_8c_adafa02cf990b67470a55b66e359ad0da}\label{_equation_8c_adafa02cf990b67470a55b66e359ad0da}} 
 \index{Equation.c@{Equation.c}!solveLinearCase@{solveLinearCase}}
 \index{solveLinearCase@{solveLinearCase}!Equation.c@{Equation.c}}
 \doxysubsubsection{\texorpdfstring{solveLinearCase()}{solveLinearCase()}}
-{\footnotesize\ttfamily struct \mbox{\hyperlink{struct_quadratic_equation_solution_status}{Quadratic\+Equation\+Solution\+Status}} solve\+Linear\+Case (\begin{DoxyParamCaption}\item[{double}]{a,  }\item[{double}]{b }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily struct \mbox{\hyperlink{struct_linear_equation_solution_status}{Linear\+Equation\+Solution\+Status}} solve\+Linear\+Case (\begin{DoxyParamCaption}\item[{double}]{a,  }\item[{double}]{b }\end{DoxyParamCaption})}
 
 \mbox{\Hypertarget{_equation_8c_a5ca5f5d928acb499d5ec68e8ad80ec7b}\label{_equation_8c_a5ca5f5d928acb499d5ec68e8ad80ec7b}} 
 \index{Equation.c@{Equation.c}!solveQuadCase@{solveQuadCase}}
